--- a/views/partials/artworks/artworksFilters.ejs
+++ b/views/partials/artworks/artworksFilters.ejs
@@ -23,7 +23,7 @@
     display: flex;
     display: -webkit-flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: start;
   }
   .filters button {
     padding: 10px 25px;
