--- a/public/style/aboutMe.css
+++ b/public/style/aboutMe.css
@@ -2,5 +2,5 @@
     width: 100%;
     height: fit-content;
     overflow: hidden;
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
