--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -13,7 +13,7 @@
   
   
   <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-xxl-12 d-flex justify-content-start" id="titles"> 
+    <div class="col-xxl-12 d-flex justify-content-start" id="titles">
       <h1><%- parsed_setting_desc.menu[0] %></h1>
     </div>
   </div>
@@ -24,14 +24,8 @@
     </div>
   </div>
 
-  <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-xxl-1"></div>
-    <div class="col-xxl-10 d-flex justify-content-center" id="gallery">
-      <div class="row d-flex justify-content-center align-items-center">
-        <%- include('../partials/artworks/artworksGallery'); %>
-      </div>
-    </div>
-    <div class="col-xxl-1"></div>
+  <div class="row d-flex justify-content-center align-items-start" id="gallery">
+    <%- include('../partials/artworks/artworksGallery'); %>
   </div>
 
   <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
