--- a/views/partials/artworks/artworksGallery.ejs
+++ b/views/partials/artworks/artworksGallery.ejs
@@ -2,31 +2,39 @@
 
 <% let bool=true;
   for (let i=0; i < shotsInfos.length-3; i++){ %>
-    <div class="gallery-items d-flex flex-row <% shotsInfos[i].tags.forEach(tag => { %><%- tag %> <% }) %>" data-id="<%- shotsInfos[i].id %>">
+    <div class="row gallery-items d-flex flex-row <% shotsInfos[i].tags.forEach(tag => { %><%- tag %> <% }) %>" data-id="<%- shotsInfos[i].id %>">
       <% if (bool == true){ %>
-        <div class="order-1 col-6 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
+        <div class="order-1 col-2 responsive-hidden-col"></div>
+        <div class="order-2 col-md-5 col-lg-3 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
       <% }else{ %>
-        <div class="order-2 col-6 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
+        <div class="order-3 col-md-5 col-lg-3 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
       <% } %>
           <a href="project/<%- shotsInfos[i].id %>">
             <h2> <span><%- shotsInfos[i].title %></span></h2>
           </a>
-            
+          
           <%- include('../artworks/artworksTags', {i : i}); %>
         </div>
+        <% if (bool == false){ %>
+          <div class="order-4 col-2 responsive-hidden-col"></div>
+        <% } %>
       <% if (bool == true){ %>
-        <div class="order-2 col-6 d-flex justify-content-center align-items-center galleryItem imgItem">
+        <div class="order-3 col-md-7 col-lg-5 d-flex justify-content-center align-items-center galleryItem imgItem">
       <% }else{ %>
-        <div class="order-1 col-6 d-flex justify-content-center align-items-center galleryItem imgItem">
+        <div class="order-1 col-2 responsive-hidden-col"></div>
+        <div class="order-2 col-md-7 col-lg-5 d-flex justify-content-center align-items-center galleryItem imgItem">
       <% } %>
           <a href="project/<%- shotsInfos[i].id %>">
             <img src="<%- shotsInfos[i].images.normal %>">
           </a>
         </div>
+        <% if (bool == true){ %>
+          <div class="order-4 col-2 responsive-hidden-col"></div>
+        <% } %>
       </div>
       <% bool = !bool;} %>
   <div id="no-item-message" class="no-item-message d-none justify-content-center align-itmes-center ">
-    <h5>Aucun projet n'est disponible pour le moment</h5>
+    <h4><strong>Aucun projet n'est disponible pour le moment</strong></h4>
   </div>
   
 
@@ -35,7 +43,7 @@
 .tag{
     width: fit-content;
     height: fit-content;
-    background-color: var(--custom-accent-color);
+    /* background-color: var(--custom-accent-color); */
     margin: 4px;
     padding: 4px 8px;
     border-radius: 12px;
@@ -43,9 +51,18 @@
 }
 .no-item-message{
   margin-top: 64px;
+  margin-bottom: 128px;
 }
 .gallery-items{
   margin-bottom: 64px;
+}
+a{
+  text-decoration: none;
+}
+@media screen and (max-width: 980px) {
+    .responsive-hidden-col {
+        display:none!important;
+    }
 }
 </style>
 
