--- a/views/partials/heads/commonHead.ejs
+++ b/views/partials/heads/commonHead.ejs
@@ -10,6 +10,9 @@
         --custom-background-image: url('<%- parsed_setting_desc.background_image[0] %>');
         --custom-background-repeat: <%- parsed_setting_desc.background_repeat %>;
         --custom-background-position: <%- parsed_setting_desc.background_position %>;
+        --custom-background-attachment: <%- parsed_setting_desc.background_attachment %>;
+        --custom-background-size: <%- parsed_setting_desc.background_size %>;
+
 
         --custom-background-color: <%- parsed_setting_desc.background_color %>;
 
@@ -25,6 +28,12 @@
         --custom-h3-size: <%- parsed_setting_desc.title_size[2] %>;
         --custom-h4-size: <%- parsed_setting_desc.title_size[3] %>;
         --custom-h5-size: <%- parsed_setting_desc.title_size[4] %>;
-        --custom-h6-size: <%- parsed_setting_desc.title_size[5] %>;  
+        --custom-h6-size: <%- parsed_setting_desc.title_size[5] %>;
+
+        --custom-p-size: <%- parsed_setting_desc.paragraph_size %>;
+
+        --custom-letter-spacing: <%- parsed_setting_desc.letter_spacing %>;
+        --custom-line-height: <%- parsed_setting_desc.line_height %>;
+        
     }
 </style>
