--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -18,7 +18,7 @@
         </div>
 
         <div class="d-flex align-items-end" id="personnalText">
-            <p> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></p>
+            <h1> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></h1>
         </div>
 
         <div id="diveButton">
