--- a/views/partials/artworks/artworksGallery.ejs
+++ b/views/partials/artworks/artworksGallery.ejs
@@ -44,6 +44,7 @@
     width: fit-content;
     height: fit-content;
     /* background-color: var(--custom-accent-color); */
+    color: var(--custom-title-color);
     margin: 4px;
     padding: 4px 8px;
     border-radius: 12px;
