--- a/public/style/projects.css
+++ b/public/style/projects.css
@@ -1,5 +1,6 @@
 .tags-container p {
   padding: 0 0 0 16px;
+  color: var(--custom-title-color);
   font-size: 0.9em;
   text-align: end;
   text-transform: uppercase;
