--- a/public/style/lab.css
+++ b/public/style/lab.css
@@ -1,15 +1,14 @@
 .lab-img {
-  margin-top: 40px;
+  /* margin-top: 40px; */
   object-fit: cover;
-  margin: 0 0 30px 0;
-  aspect-ratio: 2/2;
+  aspect-ratio: 1/1;
 }
 
 .lab-img img{
-  height: 100%;
-  width: 100%;
+  height: 261px;
+  width: 261px;
   object-fit: cover;
-
+  aspect-ratio: 1/1;
 }
 
 .mobile-numbers {
@@ -19,5 +18,10 @@
 @media screen and (max-width: 980px) {
   .mobile-numbers {
       display: block;
+  }
+
+  .lab-img img{
+    height: 360px;
+    width: 360px;
   }
 }
