--- a/views/partials/heads/commonHead.ejs
+++ b/views/partials/heads/commonHead.ejs
@@ -29,6 +29,13 @@
         --custom-h4-size: <%- parsed_setting_desc.title_size[3] %>;
         --custom-h5-size: <%- parsed_setting_desc.title_size[4] %>;
         --custom-h6-size: <%- parsed_setting_desc.title_size[5] %>;
+        
+        --custom-h1-weight: <%- parsed_setting_desc.title_weight[0] %>;
+        --custom-h2-weight: <%- parsed_setting_desc.title_weight[1] %>;
+        --custom-h3-weight: <%- parsed_setting_desc.title_weight[2] %>;
+        --custom-h4-weight: <%- parsed_setting_desc.title_weight[3] %>;
+        --custom-h5-weight: <%- parsed_setting_desc.title_weight[4] %>;
+        --custom-h6-weight: <%- parsed_setting_desc.title_weight[5] %>;
 
         --custom-p-size: <%- parsed_setting_desc.paragraph_size %>;
 
