--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -127,3 +127,16 @@
     <script src="/script.js"></script>
   </body>
   </html>
+
+  <style>
+    .textProject{
+      font-size: var(--custom-p-size);
+      font-family: var(--custom-corps-font);
+      color: var(--custom-corps-color);
+    }
+    .textProject h2{
+      font-size: var(--custom-h2-size);
+      font-family: var(--custom-title-font);
+      color: var(--custom-title-color);
+    }
+  </style>
