--- a/views/partials/artworks/artworksGallery.ejs
+++ b/views/partials/artworks/artworksGallery.ejs
@@ -10,7 +10,7 @@
         <div class="order-3 col-md-5 col-lg-3 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
       <% } %>
           <a href="project/<%- shotsInfos[i].id %>">
-            <h2> <span><%- shotsInfos[i].title %></span></h2>
+            <h2><%- shotsInfos[i].title %></h2>
           </a>
           
           <%- include('../artworks/artworksTags', {i : i}); %>
@@ -45,7 +45,9 @@
     height: fit-content;
     /* background-color: var(--custom-accent-color); */
     color: var(--custom-title-color);
-    margin: 4px;
+    /* color: black; */
+    opacity: 0.6;
+;    margin: 4px;
     padding: 4px 8px;
     border-radius: 12px;
     text-transform: uppercase;
