--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -14,7 +14,7 @@
     </div>
 
     <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-xxl-12 d-flex justify-content-start" id="titles"> 
+        <div class="col-xxl-12 d-flex justify-content-start lab-title" id="titles"> 
             <h1><%- parsed_setting_desc.menu[1] %></h1>
         </div>
     </div>
@@ -25,18 +25,18 @@
             let labLength = parsed_lab_desc.images.length;
             for(j=0; j < labLength; j++) {
                 if (colBool==true) { %>
-                    <div class="col-sm-4 col-lg-3 d-flex justify-content-center align-items-center "> <p class="mobile-numbers"> <% if(j<9) { %> 0<%-j+1%> <%} else {%> <%-j+1%> <%}%> </p></div>
+                    <div class="col-md-0 col-lg-3 d-flex justify-content-center align-items-center "></div>
                     
-                    <div class="col-sm-8 col-lg-3 d-flex justify-content-center align-items-center lab-img">
+                    <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center lab-img">
                         <img src="<%- parsed_lab_desc.images[j] %>">
                     </div>
 
                 <% colBool = false;
                     } else {%>
-                    <div class="col-sm-8 col-lg-3 d-flex justify-content-center align-items-center lab-img">
+                    <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center lab-img">
                         <img src="<%- parsed_lab_desc.images[j] %>">
                     </div>
-                    <div class="col-sm-4 col-lg-3 d-flex justify-content-center align-items-center"> <p class="mobile-numbers"> <% if(j<9) { %> 0<%-j+1%> <%} else {%> <%-j+1%> <%}%> </p></div>
+                    <div class="col-md-0 col-lg-3 d-flex justify-content-center align-items-center"></div>
                 <% colBool = true;
                 }
             } %>
