--- a/public/style/style.css
+++ b/public/style/style.css
@@ -29,23 +29,29 @@ h1,h2,h3,h4,h5,h6{
 }
 h1{
     font-size: var(--custom-h1-size);
+    font-weight: var(--custom-h1-weight);
     /* font-size: 3rem; */
     /* margin-bottom: 4rem; */
 }
 h2{
     font-size: var(--custom-h2-size);
+    font-weight: var(--custom-h1-weight);
 }
 h3{
     font-size: var(--custom-h3-size);
+    font-weight: var(--custom-h1-weight);
 }
 h4{
     font-size: var(--custom-h4-size);
+    font-weight: var(--custom-h1-weight);
 }
 h5{
     font-size: var(--custom-h5-size);
+    font-weight: var(--custom-h1-weight);
 }
 h6{
     font-size: var(--custom-h6-size);
+        font-weight: var(--custom-h1-weight);
 }
 
 .no-scroll{
