--- a/views/partials/artworks/artworksGallery.ejs
+++ b/views/partials/artworks/artworksGallery.ejs
@@ -45,9 +45,8 @@
     height: fit-content;
     /* background-color: var(--custom-accent-color); */
     color: var(--custom-title-color);
-    /* color: black; */
-    opacity: 0.6;
-;    margin: 4px;
+    font-size: var(--custom-p-size);
+    opacity: 0.8;
     padding: 4px 8px;
     border-radius: 12px;
     text-transform: uppercase;
