--- a/views/partials/artworks/artworksGallery.ejs
+++ b/views/partials/artworks/artworksGallery.ejs
@@ -43,9 +43,10 @@
 .tag{
     width: fit-content;
     height: fit-content;
-    /* background-color: var(--custom-accent-color); */
-    color: var(--custom-title-color);
-    font-size: var(--custom-p-size);
+    background-color: none;
+    color: var(--custom-tag-color);
+    font-size: var(--custom-tag-size);
+    font-weight: var(--custom-tag-weight);
     opacity: 0.8;
     padding: 4px 8px;
     border-radius: 12px;
