--- a/views/partials/heads/commonHead.ejs
+++ b/views/partials/heads/commonHead.ejs
@@ -5,7 +5,7 @@
 <style>
     :root {
         --custom-title-font: <%- parsed_setting_desc.font_name[0] %>;
-        --custom-corps-font: <%- parsed_setting_desc.font_name[1] %>;
+        --custom-p-font: <%- parsed_setting_desc.font_name[1] %>;
 
         --custom-background-image: url('<%- parsed_setting_desc.background_image[0] %>');
         --custom-background-repeat: <%- parsed_setting_desc.background_repeat %>;
@@ -16,31 +16,42 @@
 
         --custom-background-color: <%- parsed_setting_desc.background_color %>;
 
-        --custom-primary-color: <%- parsed_setting_desc.colors[0] %>;
-        --custom-secondary-color: <%- parsed_setting_desc.colors[1] %>;
-        --custom-accent-color: <%- parsed_setting_desc.colors[2] %>;
+        --custom-accent-color: <%- parsed_setting_desc.accent_color %>;
 
-        --custom-title-color: <%- parsed_setting_desc.font_colors[0] %>;
-        --custom-corps-color: <%- parsed_setting_desc.font_colors[1] %>;
+        --custom-h1-color: <%- parsed_setting_desc.h1[0] %>;
+        --custom-h2-color: <%- parsed_setting_desc.h2[0] %>;
 
-        --custom-h1-size: <%- parsed_setting_desc.title_size[0] %>;
-        --custom-h2-size: <%- parsed_setting_desc.title_size[1] %>;
-        --custom-h3-size: <%- parsed_setting_desc.title_size[2] %>;
-        --custom-h4-size: <%- parsed_setting_desc.title_size[3] %>;
-        --custom-h5-size: <%- parsed_setting_desc.title_size[4] %>;
-        --custom-h6-size: <%- parsed_setting_desc.title_size[5] %>;
+        --custom-h1-size: <%- parsed_setting_desc.h1[1] %>;
+        --custom-h2-size: <%- parsed_setting_desc.h2[1] %>;
         
-        --custom-h1-weight: <%- parsed_setting_desc.title_weight[0] %>;
-        --custom-h2-weight: <%- parsed_setting_desc.title_weight[1] %>;
-        --custom-h3-weight: <%- parsed_setting_desc.title_weight[2] %>;
-        --custom-h4-weight: <%- parsed_setting_desc.title_weight[3] %>;
-        --custom-h5-weight: <%- parsed_setting_desc.title_weight[4] %>;
-        --custom-h6-weight: <%- parsed_setting_desc.title_weight[5] %>;
+        --custom-h1-weight: <%- parsed_setting_desc.h1[2] %>;
+        --custom-h2-weight: <%- parsed_setting_desc.h2[2] %>;
 
-        --custom-p-size: <%- parsed_setting_desc.paragraph_size %>;
+        --custom-h1-letter-spacing: <%- parsed_setting_desc.h1[3] %>;
+        --custom-h2-letter-spacing: <%- parsed_setting_desc.h2[3] %>;
 
-        --custom-letter-spacing: <%- parsed_setting_desc.letter_spacing %>;
-        --custom-line-height: <%- parsed_setting_desc.line_height %>;
-        
+        --custom-p-color: <%- parsed_setting_desc.paragraph[0] %>;
+        --custom-p-size: <%- parsed_setting_desc.paragraph[1] %>;
+        --custom-p-weight: <%- parsed_setting_desc.paragraph[2] %>;
+
+        --custom-tag-color: <%- parsed_setting_desc.tags[0] %>;
+        --custom-tag-size: <%- parsed_setting_desc.tags[1] %>;
+        --custom-tag-weight: <%- parsed_setting_desc.tags[2] %>;
+
+        --custom-filter-button-inactive-color: <%- parsed_setting_desc.filter_button[0] %>;
+        --custom-filter-button-active-color: <%- parsed_setting_desc.filter_button[1] %>;
+        --custom-filter-button-size: <%- parsed_setting_desc.filter_button[2] %>;
+        --custom-filter-button-weight: <%- parsed_setting_desc.filter_button[3] %>;
+
+        --custom-button-typo-color: <%- parsed_setting_desc.button_typo[0] %>;
+        --custom-button-typo-size: <%- parsed_setting_desc.button_typo[1] %>;
+        --custom-button-typo-weight: <%- parsed_setting_desc.button_typo[2] %>;
+
+        --custom-button-container-bg-color: <%- parsed_setting_desc.button_container[0] %>;
+        --custom-button-container-border: <%- parsed_setting_desc.button_container[1] %>;
+        --custom-button-container-border-radius: <%- parsed_setting_desc.button_container[3] %>;
+
+        --custom-span-color: <%- parsed_setting_desc.span[0] %>;
+        --custom-span-weight: <%- parsed_setting_desc.span[1] %>;
     }
 </style>
