start branch page/about-me

--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -16,9 +16,12 @@
             <h1><%- parsed_setting_desc.menu[3] %></h1>
         </div>
     </div>
-
     <div class="row d-flex justify-content-center align-items-center">
-        <%- include('../partials/aboutMe/aboutMeInfos'); %>
+        <div class="col-xxl-10 d-flex justify-content-center">
+            <div class="row d-flex justify-content-center align-items-center">
+                <%- include('../partials/aboutMe/aboutMeInfos'); %>
+            </div>
+        </div>
     </div>
 
     <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
