fixing responsive homepage + all containers

--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/heads/aboutMeHead'); %>
 </head>
-<body class="container col sm-12">
+<body class="container-lg">
     
     <%- include('../partials/socialMedia'); %>
     
