--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -5,7 +5,7 @@
     <%- include('../partials/heads/contactHead'); %>
 </head>
 
-<body class="container">
+<body class="container-lg">
 
     <header>
         <%- include('../partials/layout/header'); %>
