--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -10,7 +10,7 @@
 </div>
 
 <div class="navmenu" id="navmenu">
-    <div class="container">
+    <div class="container-lg">
         <div class="row d-flex justify-content-center align-items-center header">
             <div class="col-md-2 d-flex justify-content-end profilePicture">
                 <a href="home"><img src="<%- userInfos.avatar_url %>"></a>
