--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -97,17 +97,20 @@
 
 	#personnalText{
 		text-align: center;
-		width: 100%;
-		margin-left: 0;
+		width: 70%;
+		margin-top: 2em;
+		margin-left: calc(50% - 35%);
 		margin-bottom: 64px;
 	}
 
 	#diveButton{
 		width:20em;
+		height: 96px;
 	}
 
 	#diveButton p{
 		font-size:2em;
+		height: 100%;
 		padding: 26px 20px;
 	}
 }
