--- a/public/style/style.css
+++ b/public/style/style.css
@@ -108,7 +108,7 @@ p{
     z-index: 100;
 } 
 
-.navmenu .container {
+.navmenu .container-lg {
     padding-top: 50px;
 }
 
@@ -171,7 +171,7 @@ p{
     }
 
     .burgerMenu img {
-        width: 120px;
+        width: 80px;
     }
     
     .footer {
