--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/heads/homeHead'); %>
 </head>
-<body class="container homepage-body">
+<body class="container-lg homepage-body">
     
     <%- include('../partials/socialMedia'); %>
     
@@ -17,7 +17,7 @@
             <img src="<%- parsed_bio.image_home[0] %>"  id="imgHome">
         </div>
 
-        <div class="d-flex align-items-end" id="personnalText">
+        <div class="d-flex justify-content-md-center justify-content-lg-start align-items-end" id="personnalText">
             <h1> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></h1>
         </div>
 
