--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -17,10 +17,8 @@
         </div>
     </div>
     <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-xxl-10 d-flex justify-content-center">
-            <div class="row d-flex justify-content-center align-items-center">
-                <%- include('../partials/aboutMe/aboutMeInfos'); %>
-            </div>
+        <div class="row col-8 d-flex justify-content-center">
+            <%- include('../partials/aboutMe/aboutMeInfos'); %>
         </div>
     </div>
 
