--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -17,9 +17,9 @@
         </div>
     </div>
     <div class="row d-flex justify-content-center align-items-center">
-        <div class="row col-8 d-flex justify-content-center">
+        <!-- <div class="row col-8 d-flex justify-content-center"> -->
             <%- include('../partials/aboutMe/aboutMeInfos'); %>
-        </div>
+        <!-- </div> -->
     </div>
 
     <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
