--- a/views/partials/aboutMe/aboutMeInfos.ejs
+++ b/views/partials/aboutMe/aboutMeInfos.ejs
@@ -1,28 +1,38 @@
 <% isTextLeft = true;
     for(let i=0; i < parsed_about_desc.images.length; i++){ %>
+        <div class="row about-rows d-flex flex-row">
             <% if(isTextLeft == true){ %>
-                <div class="col-sm-4 col-xl-6 d-flex flex-column justify-content-center align-items-start">
+                <div class="col-2"></div>
+
+                <div class="col-4 d-flex flex-column justify-content-center align-items-start">
                     <%- parsed_about_desc.textes[i] %>
                 </div>
 
                 <div class="col-2"></div>
                 
-                <div class="img-container col-4 col-xl-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="img-container col-2 d-flex flex-column justify-content-center align-items-center">
                     <img src="<%- parsed_about_desc.images[i] %>">
                 </div>
+                <div class="col-2"></div>
+            </div>
                 <% isTextLeft = false;
             } else { %>
-                <div class="img-container col-4 col-xl-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-2"></div>
+                <div class="img-container col-2 d-flex flex-column justify-content-center align-items-center">
                     <img src="<%- parsed_about_desc.images[i] %>">
                 </div>
 
                 <div class="col-2"></div>
                 
-                <div class="col-4 col-xl-6 d-flex flex-column justify-content-center align-items-start">
+                <div class="col-4 d-flex flex-column justify-content-center align-items-start">
                     <%- parsed_about_desc.textes[i] %>
                 </div>
+                <div class="col-2"></div>
+            </div>
                 <% isTextLeft = true; %>
-    <% }} %>
+            
+            <% }} %>
+        
 
         
 
@@ -37,5 +47,8 @@
     width: 213px;
     height: 213px;
     object-fit: cover;
+}
+.about-rows{
+    margin-bottom: 64px;
 }
 </style>
