--- a/views/partials/artworks/artworksGallery.ejs
+++ b/views/partials/artworks/artworksGallery.ejs
@@ -7,7 +7,7 @@
         <div class="order-1 col-2 responsive-hidden-col"></div>
         <div class="order-2 col-md-5 col-lg-3 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
       <% }else{ %>
-        <div class="order-3 col-md-5 col-lg-3 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
+        <div class="order-3 col-md-5 col-lg-3 d-flex flex-column justify-content-center align-items-start galleryItem titleItem">
       <% } %>
           <a href="project/<%- shotsInfos[i].id %>">
             <h2><%- shotsInfos[i].title %></h2>
@@ -19,7 +19,7 @@
           <div class="order-4 col-2 responsive-hidden-col"></div>
         <% } %>
       <% if (bool == true){ %>
-        <div class="order-3 col-md-7 col-lg-5 d-flex justify-content-center align-items-center galleryItem imgItem">
+        <div class="order-3 col-md-7 col-lg-5 d-flex justify-content-center align-items-start galleryItem imgItem">
       <% }else{ %>
         <div class="order-1 col-2 responsive-hidden-col"></div>
         <div class="order-2 col-md-7 col-lg-5 d-flex justify-content-center align-items-center galleryItem imgItem">
