fixing responsive for artworks

--- a/views/partials/artworks/artworksFilters.ejs
+++ b/views/partials/artworks/artworksFilters.ejs
@@ -51,6 +51,13 @@
   .filters button.is-checked a {
     color: inherit;
   }
+
+  @media screen and (max-width:980px) {
+    .filters button {
+      padding: 24px 32px;
+    }
+    
+  }
 </style>
 
 <%- include('./artworksFiltersScript.ejs'); %>
