--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,6 +2,7 @@
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
+    
 }
 
 a{
@@ -21,6 +22,12 @@ body{
     min-height:100vh;
     overflow-x: hidden;
     /* overflow-x: hidden; */
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+
+element::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 
 h1,h2,h3,h4,h5,h6{
