--- a/views/partials/layout/footer.ejs
+++ b/views/partials/layout/footer.ejs
@@ -1,7 +1,7 @@
 
 <div class="row infos-container">
     <div class="col-4 d-flex justify-content-center align-items-center credits">
-        <p>codé par Nils Boisson et Mathieu Dubart</p>
+        <p class="bg-transparent">codé par Nils Boisson et Mathieu Dubart</p>
     </div>
 
     <div class="col-4 d-flex justify-content-evenly align-items-center socialMediasFooter">
@@ -11,6 +11,6 @@
     </div>
 
     <div class="col-4 d-flex justify-content-center align-items-center legalMentions">
-        <p>Mentions légales</p>
+        <p class="bg-transparent">Mentions légales</p>
     </div>
 </div>
