--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -23,7 +23,7 @@
 
         <div id="diveButton">
             <a href="artworks">
-                <p class="d-flex justify-content-center align-items-center">Let's dive right in</p>
+                <p class="d-flex justify-content-center align-items-center bg-transparent">Let's dive right in</p>
             </a>
         </div>
     </main>
