--- a/public/style/style.css
+++ b/public/style/style.css
@@ -23,6 +23,10 @@ body{
     /* overflow-x: hidden; */
 }
 
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
 h1,h2,h3,h4,h5,h6{
     font-family: var(--custom-title-font);
     color: var(--custom-title-color);
