--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -12,7 +12,7 @@
     <%- include('../partials/socialMedia'); %>
 
     <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-xxl-12 d-flex justify-content-start" id="titles"> 
+        <div class="col-xxl-12 d-flex justify-content-start"> 
             <h1><%- parsed_setting_desc.menu[1] %></h1>
         </div>
     </div>
