--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -14,7 +14,7 @@
     </div>
 
     <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-xxl-12 d-flex justify-content-start lab-title" id="titles"> 
+        <div class="col-xxl-12 d-flex justify-content-start lab-title"> 
             <h1><%- parsed_setting_desc.menu[1] %></h1>
         </div>
     </div>
