--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -12,9 +12,11 @@
     </header>
 
     <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-xxl-12 d-flex justify-content-start" id="titles"> 
+        <div class="col-2"></div>
+        <div class="col-8 d-flex justify-content-start">
             <h1><%- parsed_setting_desc.menu[3] %></h1>
         </div>
+        <div class="col-2"></div>
     </div>
     <div class="row d-flex justify-content-center align-items-center">
         <!-- <div class="row col-8 d-flex justify-content-center"> -->
