solo project page

--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -13,7 +13,7 @@
         <%- include('../partials/socialMedia'); %>
     </div>
 
-    <div class="row d-flex justify-content-center align-items-center">
+    <div class="row d-flex justify-content-center align-items-center" id="top">
         <div class="col-xxl-12 d-flex justify-content-start lab-title"> 
             <h1><%- parsed_setting_desc.menu[1] %></h1>
         </div>
@@ -42,6 +42,13 @@
             } %>
     </div>
 
+    <div class="row up-arrow-container">
+      <div class="col-12 d-flex justify-content-center align-items-center">
+        <a href="#top"> <div class="arrowLinkProjects">
+          <img src="/images/arrow-up.svg">
+        </div> </a>
+      </div>
+    </div>
 
     
     <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
