--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -4,9 +4,10 @@
         <a href="home"><img src="<%- userInfos.avatar_url %>"></a>
     </div>
     <div class="col-md-8"></div>
-    <div class="col-md-2 burgerMenu" id="burgerMenu">
+    <div class="col-md-1 burgerMenu" id="burgerMenu">
         <a><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1024px-Hamburger_icon.svg.png"></a>
     </div>
+    <div class="col-md-1"></div>
 </div>
 
 <div class="navmenu" id="navmenu">
@@ -19,6 +20,7 @@
             <div class="col-md-2 burgerMenu" id="closingMenu">
                 <a><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-close-512.png"></a>
             </div>
+            <div class="col-md-1"></div>
         </div>
         <div class="row d-flex justify-content-center align-items-center">
             <% for(i=0;i<parsed_setting_desc.menu.length; i++) { %>
