--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,7 +2,6 @@
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
-    
 }
 
 a{
@@ -24,10 +23,7 @@ body{
     /* overflow-x: hidden; */
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
-}
-
-element::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
+    scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
