--- a/views/partials/downloadCvPortfolio.ejs
+++ b/views/partials/downloadCvPortfolio.ejs
@@ -1,12 +1,31 @@
-<div class="wantMoreIcons" id="CV">
-    <a href="<%- parsed_bio.lien_cv %>" target="_blank">
-      <img src="https://www.mymagic.ch/wp-content/uploads/2020/09/download-logo-png-image-77292.png">
-    </a>
-    <p>Curriculum Vitae</p>
+<div class="row">
+  <div class="col-12">
+    <h2>Want more ?</h2>
+  </div>
 </div>
-<div class="wantMoreIcons" id="portfolio">
-    <a href="<%- parsed_bio.lien_book %>" target="_blank">
-      <img src="https://www.mymagic.ch/wp-content/uploads/2020/09/download-logo-png-image-77292.png">
-    </a>
-    <p>Portfolio</p>
+
+<div class="row d-flex" style="margin-top: 32px;">
+  <div class="row col-12 d-flex wantMoreIcons">
+    <div class="col-1">
+      <a href="<%- parsed_bio.lien_cv %>" target="_blank">
+        <img src="https://www.mymagic.ch/wp-content/uploads/2020/09/download-logo-png-image-77292.png">
+      </a>
+    </div>
+
+    <div class="col-11 d-flex justify-content-start align-items-center">
+      <p>Curriculum Vitae</p>
+    </div>
+  </div>
+</div>
+<div class="row d-flex">
+  <div class="row col-12 d-flex wantMoreIcons">
+    <div class="col-1">
+      <a href="<%- parsed_bio.lien_book %>" target="_blank">
+        <img src="https://www.mymagic.ch/wp-content/uploads/2020/09/download-logo-png-image-77292.png">
+      </a>
+    </div>
+    <div class="col-11 d-flex justify-content-start align-items-center">
+      <p>Portfolio</p>
+    </div>
+  </div>
 </div>
