--- a/views/partials/contactSocialMedia.ejs
+++ b/views/partials/contactSocialMedia.ejs
@@ -1,12 +1,38 @@
-<div class="socialMediaIcons" id="mailInfo">
-<a href="mailto:<%- parsed_bio.email %>" target="_blank"><img src="https://icon-library.com/images/e-mail-icon-png/e-mail-icon-png-11.jpg"></a>
-    <p> <%- parsed_bio.email %></p>
+<div class="row d-flex mailInfo">
+    <div class="row col-12 socialMediaIcons">
+        <div class="col-1">
+            <a href="mailto:<%- parsed_bio.email %>" target="_blank">
+                <img src="https://icon-library.com/images/e-mail-icon-png/e-mail-icon-png-11.jpg">
+            </a>
+        </div>
+        <div class="col-11 d-flex justify-content-start align-items-center">
+            <p> <%- parsed_bio.email %></p>
+        </div>
+    </div>
 </div>
-<div class="socialMediaIcons" id="linkedInInfo">
-    <a href="<%- userInfos.links.linkedin %>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/61/61109.png"></a>
-    <p> <%- parsed_bio.linkedin %> </p>
+
+<div class="row d-flex linkedInInfo">
+    <div class="row col-12 socialMediaIcons">
+        <div class="col-1">
+            <a href="<%- userInfos.links.linkedin %>" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png">
+            </a>
+        </div>
+        <div class="col-11 d-flex justify-content-start align-items-center">
+            <p> <%- parsed_bio.linkedin %> </p>
+        </div>
+    </div>
 </div>
-<div class="socialMediaIcons" id="instagramInfo">
-    <a href="<%- userInfos.links.instagram %>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/87/87390.png"></a>
-    <p><%- parsed_bio.instagram %></p>
+
+<div class="row d-flex instagramInfo">
+    <div class="row col-12 socialMediaIcons">
+        <div class="col-1">
+            <a href="<%- userInfos.links.instagram %>" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png">
+            </a>
+        </div>
+        <div class="col-11 d-flex justify-content-start align-items-center">
+            <p><%- parsed_bio.instagram %></p>
+        </div>
+    </div>
 </div>
