--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -14,9 +14,11 @@
     </div>
 
     <div class="row d-flex justify-content-center align-items-center" id="top">
-        <div class="col-xxl-12 d-flex justify-content-start lab-title"> 
-            <h1><%- parsed_setting_desc.menu[1] %></h1>
-        </div>
+        <div class="col-2"></div>
+            <div class="col-8 d-flex justify-content-start">
+                <h1><%- parsed_setting_desc.menu[1] %></h1>
+            </div>
+        <div class="col-2"></div>
     </div>
     
     <div class="row d-flex lab">
