--- a/views/partials/artworks/artworksFilters.ejs
+++ b/views/partials/artworks/artworksFilters.ejs
@@ -27,7 +27,7 @@
   .filters button {
     padding: 10px 25px;
     margin: 5px 5px;
-    background-color: #121212;
+    background-color: transparent;
     border: none;
     transition: 150ms;
     color: var(--custom-filter-button-inactive-color);
