--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -23,7 +23,7 @@
 
         <div id="diveButton">
             <a href="artworks">
-                <p class="d-flex justify-content-center align-items-center"> <%- parsed_bio.text_button[0] %></p>
+                <p class="d-flex justify-content-center align-items-center bg-transparent"> <%- parsed_bio.text_button[0] %></p>
             </a>
         </div>
     </main>
