--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -26,7 +26,7 @@
             <% for(i=0;i<parsed_setting_desc.menu.length; i++) { %>
                 <div class="col-md-2"></div>
                 <div class="col-md-10 links-container">
-                    <a href="<%- parsed_setting_desc.menu_link[i] %>" class="menu-links"> <%- parsed_setting_desc.menu[i] %></a>
+                    <a href="<%- parsed_setting_desc.menu_link[i] %>" class="menu-links"> <h1> <%- parsed_setting_desc.menu[i] %> </h1></a>
                 </div>
             <% } %>
         </div>
