fix titles colors

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -37,12 +37,12 @@ h1,h2{
 h1{
     font-size: var(--custom-h1-size);
     font-weight: var(--custom-h1-weight);
-    color: var(--custom-h1-weight);
+    color: var(--custom-h1-color);
 }
 h2{
     font-size: var(--custom-h2-size);
     font-weight: var(--custom-h2-weight);
-    color: var(--custom-h2-weight);
+    color: var(--custom-h2-color);
 }
 
 
