--- a/public/style/style.css
+++ b/public/style/style.css
@@ -24,6 +24,8 @@ body{
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
     scroll-behavior: smooth;
+    /* SAFARI FIX */
+    margin-left: 0px !important; margin-right: 0px !important; padding-left: 0px !important; padding-right: 0px !important;
 }
 
 body::-webkit-scrollbar {
