fixing safari padding and margins 2.0

--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/heads/aboutMeHead'); %>
 </head>
-<body class="container-lg">
+<body class="container-lg safari_only">
     
     <%- include('../partials/socialMedia'); %>
     
