--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/heads/homeHead'); %>
     <%- include('../partials/heads/labHead'); %>
 </head>
-<body class="container-lg">
+<body class="container-lg safari_only">
     <header>
         <%- include('../partials/layout/header'); %>
     </header>
