--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/heads/homeHead'); %>
 </head>
-<body class="container-lg homepage-body">
+<body class="container-lg homepage-body safari_only">
     
     <%- include('../partials/socialMedia'); %>
     
