--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body class="container-lg">
+    <body class="container-lg safari_only">
       <header>
           <%- include('../partials//layout/header'); %>
       </header>
