--- a/public/style/style.css
+++ b/public/style/style.css
@@ -24,8 +24,6 @@ body{
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
     scroll-behavior: smooth;
-    /* SAFARI FIX */
-    margin-left: 0px !important; margin-right: 0px !important; padding-left: 0px !important; padding-right: 0px !important;
 }
 
 body::-webkit-scrollbar {
@@ -141,6 +139,10 @@ p{
     font-weight: 600;
 }
 
+_::-webkit-full-page-media, _:future, :root .safari_only {
+    margin-left: 0px !important; margin-right: 0px !important; padding-left: 0px !important; padding-right: 0px !important;
+  }
+
 @media screen and (max-width:980px){
 
     body{
@@ -168,5 +170,6 @@ p{
     .socialMediasFooter a img {
         width: 50px;
         height: 50px;
+    
     }
 }
