--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -181,11 +181,13 @@
       font-size: var(--custom-h1-size);
       font-weight: var(--custom-h1-weight);
       color: var(--custom-h1-color);
+      letter-spacing: var(--custom-h1-letter-spacing);
     }
     .textProject h2{
       font-family: var(--custom-h2-font);
       font-size: var(--custom-h2-size);
       font-weight: var(--custom-h2-weight);
       color: var(--custom-h2-color);
+      letter-spacing: var(--custom-h2-letter-spacing);
     }
   </style>
