--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -46,7 +46,7 @@
 	text-align: center;
 }
 
-#diveButton p{
+#diveButton a p{
 	font-family:var(--custom-p-font);
 	color:var(--custom-button-typo-color);
 	font-size:var(--custom-button-typo-size);
@@ -83,11 +83,6 @@
 		margin-bottom: 16px;
 		margin-top: 16px;
 	}
-
-	#diveButton p{
-		font-size:1.5em;
-	}
-
 }
 
 @media screen and (max-width:980px) {
@@ -112,7 +107,7 @@
 	}
 
 	#diveButton p{
-		font-size:2em;
+		/* font-size:2em; */
 		height: 100%;
 		padding: 26px 20px;
 	}
